fixing styles /adding motions/ add date picker/validation message to found form

--- a/client/public/locales/ar/translation.json
+++ b/client/public/locales/ar/translation.json
@@ -34,10 +34,8 @@
   "When did you find the item?": "متى وجدت الغرض؟",
 
   "Where did you find the item?": "أين وجدت الغرض؟",
-  "Upload Item Photo": "ارفع صورة الغرض",
-  "Upload photo": "ارفع الصورة",
   "Selected file:": "الملف المحدد:",
-  "How Did You Hear About Us?": "",
+  "How Did You Hear About Us?": "كيف سمعت عنا؟",
   "Select...": "اختيار...",
   "I acknowledge that I committed to all instructions for reporting a found item.": " أقر بأني التزمت بجميع التعليمات الخاصة بالإبلاغ عن غرض معثور عليه",
   "I agree to the": "أوافق على",
@@ -48,7 +46,70 @@
   "Mention details such as type, color, brand, size, place, any unique features, etc.": "أذكر تفاصيل مثل نوع الغرض، اللون، الماركة، المقاس، المكان، وأي تفاصيل مميزة، إلخ...",
   "Enter the date": "أدخل التاريخ",
   "Enter the location": "أدخل وصف الموقع",
-  "Where and who did you take the item to": "أين و لمن سلمت الغرض",
   "Please enter a description of the place and information about the recipient if possible.": "رجاءً قم بإدخال وصف و معلومات عن المكان الذي قمت بتسليم الغرض فيه، وعن جهةالإستلام",
-  "Item photo": "صورة الغرض"
+  "Upload Item Photo": "ارفع صورة الغرض",
+  "Select the date": "اختر التاريخ",
+  "Where and who did you take the item to?": "أين و لمن سلمت الغرض؟",
+  "What did you lose?": "ماذا فقدت؟",
+  "Found a lost item ?": "وجدت غرض مفقود؟",
+  "Found items form": "نموذج المعثورات",
+  "Gmail": "البريد الإلكتروني",
+  "Enter your gmail": "أدخل البريد الإلكتروني",
+  "Description of the Lost Item": "وصف الغرض المفقود",
+  "Approximate Location": "الموقع التقريبي",
+  "Enter the approximate location": "أدخل الموقع التقريبي",
+  "I acknowledge that a service fee of 25 SAR applies if the item is found": "أقر بأن رسوم الخدمة 25 ريال سعودي تطبق في حال إيجاد الغرض",
+  "Item Photo": "صورة الغرض",
+  "Upload photo": "ارفع صورة",
+  "Selected file:": "الملف المحدد:",
+  "Friend/Family": "صديق/عائلة",
+  "X (twitter)": "X (تويتر)",
+  "Instagram": "إنستغرام",
+  "TikTok": "تيك توك",
+  "LinkedIn": "لينكد إن",
+
+  "About Dhallaty": "عن ضالتي",
+  "about_hero_description": "نربط الأشخاص بممتلكاتهم المفقودة من خلال التكنولوجيا المبتكرة ومجتمع متعاون. نجعل العثور على الأغراض المفقودة بسيطاً وسريعاً وآمناً.",
+  "Our Mission": "مهمتنا",
+  "mission_description": "مهمتنا هي إعادة جمع الناس بممتلكاتهم المفقودة من خلال إنشاء منصة موثوقة تربط الواجدين بالأصحاب. نستفيد من التكنولوجيا لجعل العملية سلسة مع بناء مجتمع يقدر الأمانة ومساعدة الآخرين.",
+  "Items Reported": "غرض مبلّغ عنه",
+  "Items Reunited": "غرض تم إعادته",
+  "Active Users": "مستخدم نشط",
+  "Success Rate": "نسبة النجاح",
+  "Why Choose Dhallaty?": "لماذا تختار ضالتي؟",
+  "Smart Matching": "مطابقة ذكية",
+  "Our advanced algorithm matches lost items with found reports using detailed descriptions and AI technology.": "خوارزميتنا المتقدمة تطابق الأغراض المفقودة مع بلاغات المعثورات باستخدام الأوصاف التفصيلية وتقنية الذكاء الاصطناعي.",
+  "Fast Response": "استجابة سريعة",
+  "Get instant notifications when a potential match is found, helping you reunite with your items quickly.": "احصل على إشعارات فورية عند العثور على تطابق محتمل، مما يساعدك على استعادة أغراضك بسرعة.",
+  "Secure Platform": "منصة آمنة",
+  "Your personal information is protected with industry-standard encryption and security measures.": "معلوماتك الشخصية محمية بمعايير التشفير والأمان القياسية في الصناعة.",
+  "Verified Users": "مستخدمون موثقون",
+  "All users are verified to ensure a trustworthy community of helpers and seekers.": "جميع المستخدمين موثقون لضمان مجتمع موثوق من المساعدين والباحثين.",
+  "Our Values": "قيمنا",
+  "Community First": "المجتمع أولاً",
+  "We believe in the power of community helping each other find lost belongings.": "نؤمن بقوة المجتمع في مساعدة بعضهم البعض للعثور على الممتلكات المفقودة.",
+  "Continuous Innovation": "الابتكار المستمر",
+  "We constantly improve our platform to provide the best lost and found experience.": "نعمل باستمرار على تحسين منصتنا لتوفير أفضل تجربة للمفقودات والمعثورات.",
+  "Trust & Transparency": "الثقة والشفافية",
+  "Building trust through transparent processes and verified user interactions.": "بناء الثقة من خلال العمليات الشفافة والتفاعلات الموثقة بين المستخدمين.",
+  "How It Works": "كيف يعمل",
+  "Report Your Item": "بلّغ عن غرضك",
+  "Fill out a detailed form about your lost or found item with description and photo.": "قم بتعبئة نموذج مفصل عن الغرض المفقود أو المعثور عليه مع الوصف والصورة.",
+  "We Match & Notify": "نطابق ونبلغ",
+  "Our system automatically matches reports and sends instant notifications.": "نظامنا يطابق البلاغات تلقائياً ويرسل إشعارات فورية.",
+  "Connect & Reunite": "تواصل واستعد",
+  "Connect with the finder or owner and arrange safe item return.": "تواصل مع الواجد أو المالك ونظم إعادة الغرض بأمان.",
+  "Frequently Asked Questions": "الأسئلة الشائعة",
+  "faq_verify_match": "كيف يتم التحقق من التطابق بين الأغراض المفقودة والمعثورة؟",
+  "faq_verify_match_answer": "نستخدم خوارزميات الذكاء الاصطناعي لمطابقة بلاغات الأغراض المفقودة والمعثورة، ونرسل تنبيهاً لصاحب الغرض من قبل موظفي ضالتي في حال وجود تطابق محتمل.",
+  "faq_service_fee": "هل هناك رسوم خدمة؟",
+  "faq_service_fee_answer": "تقديم البلاغ مجاني، ولكن إذا تطابق غرضك المفقود مع قائمة المعثورات، ستحتاج إلى دفع رسوم الخدمة.",
+  "faq_ambassadors": "ما هي عضوية سفراء ضالتي؟",
+  "faq_ambassadors_answer": "بعد الإبلاغ عن غرض معثور، ستصبح تلقائياً عضواً نشطاً. يتمتع سفراء ضالتي النشطون بخصومات وعروض أو هدايا، يتم إرسالها بشكل دوري إلى البريد الإلكتروني المسجل في النموذج، تقديراً لمبادرتهم ومساهمتهم النشطة في مساعدة المجتمع على استرداد الأغراض المفقودة.",
+  "faq_delivery": "هل لدى ضالتي خدمات توصيل؟",
+  "faq_delivery_answer": "لا، إنها مجرد خدمة رقمية لتسهيل عملية إيجاد الأغراض المفقودة، وليست مسؤولة عن أي خدمات متعلقة بالغرض المفقود نفسه، بما في ذلك توصيل الغرض المفقود.",
+  "faq_duration": "ما هي مدة العثور على الغرض المفقود؟",
+  "faq_duration_answer": "سيتم تنبيهك مباشرة في حال العثور على تطابق للدفع والكشف عن موقع الغرض.",
+  "Join Our Community": "انضم إلى مجتمعنا",
+  "join_community_description": "كن جزءاً من مجتمع متنامٍ مكرس لمساعدة الناس على استرداد أغراضهم المفقودة. معاً، يمكننا جعل فقدان شيء ما أقل إجهاداً."
 }
