--- a/client/public/locales/en/translation.json
+++ b/client/public/locales/en/translation.json
@@ -34,8 +34,6 @@
   "Description of the found item": "Description of the found item",
   "When did you find the item?": "When did you find the item?",
   "Where did you find the item?": "Where did you find the item?",
-  "Item Photo": "Item Photo",
-  "Upload photo": "Upload photo",
   "Selected file:": "Selected file:",
   "How Did You Hear About Us?": "How Did You Hear About Us?",
   "Select...": "Select...",
@@ -49,5 +47,69 @@
   "Enter the date": "Enter the date",
   "Enter the location": "Enter the location",
   "Please enter a description of the place and information about the recipient if possible.": "Please enter a description of the place and information about the recipient if possible.",
-  "Item photo": "Item photo"
+  "Upload Item Photo": "Upload Item Photo",
+  "Select the date": "Select the date",
+  "Where and who did you take the item to?": "Where and who did you take the item to?",
+  "What did you lose?": "What did you lose?",
+  "Found a lost item ?": "Found a lost item ?",
+  "Found items form": "Found items form",
+  "Gmail": "Gmail",
+  "Enter your gmail": "Enter your gmail",
+  "Description of the Lost Item": "Description of the Lost Item",
+  "Approximate Location": "Approximate Location",
+  "Enter the approximate location": "Enter the approximate location",
+  "I acknowledge that a service fee of 25 SAR applies if the item is found": "I acknowledge that a service fee of 25 SAR applies if the item is found",
+  "Item Photo": "Item Photo",
+  "Upload photo": "Upload photo",
+  "Selected file:": "Selected file:",
+  "Friend/Family": "Friend/Family",
+  "X (twitter)": "X (twitter)",
+  "Instagram": "Instagram",
+  "TikTok": "TikTok",
+  "LinkedIn": "LinkedIn",
+
+  "About Dhallaty": "About Dhallaty",
+  "about_hero_description": "Connecting people with their lost belongings through innovative technology and a caring community. We make finding lost items simple, fast, and secure.",
+  "Our Mission": "Our Mission",
+  "mission_description": "Our mission is to reunite people with their lost belongings by creating a trusted platform that connects finders with owners. We leverage technology to make the process seamless while building a community that values honesty and helping others.",
+  "Items Reported": "Items Reported",
+  "Items Reunited": "Items Reunited",
+  "Active Users": "Active Users",
+  "Success Rate": "Success Rate",
+  "Why Choose Dhallaty?": "Why Choose Dhallaty?",
+  "Smart Matching": "Smart Matching",
+  "Our advanced algorithm matches lost items with found reports using detailed descriptions and AI technology.": "Our advanced algorithm matches lost items with found reports using detailed descriptions and AI technology.",
+  "Fast Response": "Fast Response",
+  "Get instant notifications when a potential match is found, helping you reunite with your items quickly.": "Get instant notifications when a potential match is found, helping you reunite with your items quickly.",
+  "Secure Platform": "Secure Platform",
+  "Your personal information is protected with industry-standard encryption and security measures.": "Your personal information is protected with industry-standard encryption and security measures.",
+  "Verified Users": "Verified Users",
+  "All users are verified to ensure a trustworthy community of helpers and seekers.": "All users are verified to ensure a trustworthy community of helpers and seekers.",
+  "Our Values": "Our Values",
+  "Community First": "Community First",
+  "We believe in the power of community helping each other find lost belongings.": "We believe in the power of community helping each other find lost belongings.",
+  "Continuous Innovation": "Continuous Innovation",
+  "We constantly improve our platform to provide the best lost and found experience.": "We constantly improve our platform to provide the best lost and found experience.",
+  "Trust & Transparency": "Trust & Transparency",
+  "Building trust through transparent processes and verified user interactions.": "Building trust through transparent processes and verified user interactions.",
+  "How It Works": "How It Works",
+  "Report Your Item": "Report Your Item",
+  "Fill out a detailed form about your lost or found item with description and photo.": "Fill out a detailed form about your lost or found item with description and photo.",
+  "We Match & Notify": "We Match & Notify",
+  "Our system automatically matches reports and sends instant notifications.": "Our system automatically matches reports and sends instant notifications.",
+  "Connect & Reunite": "Connect & Reunite",
+  "Connect with the finder or owner and arrange safe item return.": "Connect with the finder or owner and arrange safe item return.",
+  "Frequently Asked Questions": "Frequently Asked Questions",
+  "faq_verify_match": "How to verify the match between missing and found items?",
+  "faq_verify_match_answer": "We utilize artificial intelligence algorithms to match the reports of missing and found items, and send an alert to the item's owner by Dhallaty staff in the event of a possible match.",
+  "faq_service_fee": "Is there a service fee?",
+  "faq_service_fee_answer": "Submitting a report is free, but if your lost item matches the found items list, you will need to pay the service fee.",
+  "faq_ambassadors": "What is Dhallaty's Ambassadors membership?",
+  "faq_ambassadors_answer": "After reporting a found item, you will automatically become an active member. Active Dhallaty ambassadors enjoy discounts, offers, or gifts, which are periodically sent to the email registered in the form, in recognition of their initiative and active contribution to helping the community recover lost items.",
+  "faq_delivery": "Does Dhallaty have delivery services?",
+  "faq_delivery_answer": "No, it is only a digital service to facilitate the process of finding missing items, and is not responsible for any services related to the missing item itself, including delivering the lost item.",
+  "faq_duration": "What is the duration of finding the missing item?",
+  "faq_duration_answer": "You will be directly alerted if a match is found to pay and reveal the item's location.",
+  "Join Our Community": "Join Our Community",
+  "join_community_description": "Be part of a growing community dedicated to helping people recover their lost items. Together, we can make losing something a little less stressful."
 }
