--- a/client/public/locales/en/translation.json
+++ b/client/public/locales/en/translation.json
@@ -111,5 +111,6 @@
   "faq_duration": "What is the duration of finding the missing item?",
   "faq_duration_answer": "You will be directly alerted if a match is found to pay and reveal the item's location.",
   "Join Our Community": "Join Our Community",
-  "join_community_description": "Be part of a growing community dedicated to helping people recover their lost items. Together, we can make losing something a little less stressful."
+  "join_community_description": "Be part of a growing community dedicated to helping people recover their lost items. Together, we can make losing something a little less stressful.",
+  "Form submitted successfully!": "Form submitted successfully!"
 }
