add payment flow front-end logic -add test-cases for payment logic

--- a/client/public/locales/ar/translation.json
+++ b/client/public/locales/ar/translation.json
@@ -111,5 +111,23 @@
   "faq_duration_answer": "سيتم تنبيهك مباشرة في حال العثور على تطابق للدفع والكشف عن موقع الغرض.",
   "Join Our Community": "انضم إلى مجتمعنا",
   "join_community_description": "كن جزءاً من مجتمع متنامٍ مكرس لمساعدة الناس على استرداد أغراضهم المفقودة. معاً، يمكننا جعل فقدان شيء ما أقل إجهاداً.",
-  "Form submitted successfully!": "تم إرسال النموذج بنجاح"
+  "Form submitted successfully!": "تم إرسال النموذج بنجاح",
+  "payment_success_message": "تم الدفع بنجاح! شكرًا لاختيارك ضالتي",
+  "payment_success_message_describtion": "ستصلك رسالة عبر البريد الإلكتروني تحتوي على تفاصيل العنصر المفقود",
+  "payment_already_success_message": "لقد قمت بالفعل بإتمام عملية الدفع بنجاح! شكرًا لاختيارك ضالتي",
+  "payment_already_success_message_describtion": "ستصلك رسالة عبر البريد الإلكتروني تحتوي على تفاصيل العنصر المفقود",
+  "payment_fail_message": "فشل الدفع",
+  "payment_fail_message_describtion": "لم تقم بإكمال عملية الدفع بنجاح",
+  "payment_progress_message": " جاري معالجة الدفع...",
+  "payment_progress_message_describtion": "يرجى الانتظار حتى يتم تأكيد معاملتك",
+  "payment_server_error_message": "تعذر استرجاع حالة الدفع. يرجى المحاولة لاحقًا",
+  "payment_server_error_message_describtion": "حدث خطأ في الخادم",
+  "report_details": "تفاصيل البلاغ",
+  "name": "الاسم",
+  "email": "البريد الإلكتروني",
+  "description": "الوصف",
+  "location": "الموقع",
+  "pay_now": "ادفع الآن",
+  "payment_redirect": "يتم إعادة التوجيه لعملية دفع آمنة...",
+  "payment_terms": "أوافق على شروط الخدمة المدفوعة غير قابلة للاسترداد"
 }
