--- a/client/public/locales/en/translation.json
+++ b/client/public/locales/en/translation.json
@@ -112,5 +112,28 @@
   "faq_duration_answer": "You will be directly alerted if a match is found to pay and reveal the item's location.",
   "Join Our Community": "Join Our Community",
   "join_community_description": "Be part of a growing community dedicated to helping people recover their lost items. Together, we can make losing something a little less stressful.",
-  "Form submitted successfully!": "Form submitted successfully!"
+  "Form submitted successfully!": "Form submitted successfully!",
+  "payment_success_message": "Payment Successful! Thank you for using Dhallaty",
+  "payment_success_message_describtion": "You will receive an e-mail with the details about your lost item",
+  "payment_already_success_message": "Your payment has already been successfully completed! Thank you for using Dhallaty.",
+  "payment_already_success_message_describtion": "You will receive an e-mail with the details about your lost item",
+  "payment_fail_message": "Payment Failed",
+  "payment_fail_message_describtion": "You did not complete the payment successfully!",
+  "payment_progress_message": "Payment still processing...",
+  "payment_progress_message_describtion": "Be patient while we confirm your transaction",
+  "payment_server_error_message": "Unable to retrieve payment status. Please check again later",
+  "payment_server_error_message_describtion": "Server error occurred",
+  "Homepage": "Homepage",
+  "report_details": "Report Details",
+  "name": "Name:",
+  "email": " Email:",
+  "description": "Description:",
+  "location": "Location:",
+  "pay_now": "Pay now",
+  "payment_redirect": "Redirecting to secure payment...",
+  "payment_terms": "I agree on the terms of Non refundable service fees",
+  "payment_unautharized_paymentToken_message": "Unauthorized Acceess",
+  "payment_unautharized_paymentToken_describtion": "The payment token used is not authorized to access this page or not registered in the data base.",
+  "payment_unautharized_reportId_message": "Unauthorized Acceess",
+  "payment_unautharized_reportId_describtion": "The report Id used is not authorized to access this page or not registered in the data base."
 }
