complete the initial item-details-send service front-back

--- a/client/public/locales/ar/translation.json
+++ b/client/public/locales/ar/translation.json
@@ -122,12 +122,28 @@
   "payment_progress_message_describtion": "يرجى الانتظار حتى يتم تأكيد معاملتك",
   "payment_server_error_message": "تعذر استرجاع حالة الدفع. يرجى المحاولة لاحقًا",
   "payment_server_error_message_describtion": "حدث خطأ في الخادم",
+  "Homepage": "الرئيسية",
   "report_details": "تفاصيل البلاغ",
   "name": "الاسم",
   "email": "البريد الإلكتروني",
-  "description": "الوصف",
-  "location": "الموقع",
+  "description": "الوصف:",
+  "location": "الموقع:",
   "pay_now": "ادفع الآن",
   "payment_redirect": "يتم إعادة التوجيه لعملية دفع آمنة...",
-  "payment_terms": "أوافق على شروط الخدمة المدفوعة غير قابلة للاسترداد"
+  "payment_terms": "أوافق على شروط الخدمة المدفوعة غير قابلة للاسترداد",
+  "payment_unautharized_paymentToken_message": "دخول غير مصرح به",
+  "payment_unautharized_paymentToken_describtion": "رمز الدفع المميز المستخدم لدخول هذه الصفحة غير مصرح له بالوصول أو غير مسجل في قاعدة البيانات",
+  "payment_unautharized_reportId_message": "دخول غير مصرح به",
+  "payment_unautharized_reportId_describtion": "رمز التقرير المميز المستخدم لدخول هذه الصفحة غير مصرح له بالوصول أو غير مسجل في قاعدة البيانات",
+  "found_at_date": "تم العثور عليه بتاريخ:",
+  "item_details_bad_request_message": "طلب غير صالح",
+  "item_details_bad_request_describtion": "لم نستطع عرض بيانات هذا العنصر لأن رقم الطلب  غير مكتمل أو فيه خطأ. تأكد من الرابط وحاول مجددا.",
+
+  "item_details_not_found_message": "العنصر غير موجود",
+  "item_details_not_found_describtion": "لم يتم العثور على  بيانات لهذا العنصر في قاعدة البيانات قد يكون محذوف أو تأكد من صحة الرابط.",
+  "item_details_server_error_message": "خطأ في الخادم",
+  "item_details_server_error_describtion": "حدث خطأ أثناء جلب تفاصيل العنصر. يرجى المحاولة مرة أخرى لاحقًا.",
+  "lost_item_details": "تفاصيل العنصر المفقود ",
+  "recipient_details": "أين ومع من العنصر الآن:  ",
+  "matched_at": "تم مطابقته بواسطة ضالتي في:  "
 }
