--- a/client/public/locales/en/translation.json
+++ b/client/public/locales/en/translation.json
@@ -135,5 +135,16 @@
   "payment_unautharized_paymentToken_message": "Unauthorized Acceess",
   "payment_unautharized_paymentToken_describtion": "The payment token used is not authorized to access this page or not registered in the data base.",
   "payment_unautharized_reportId_message": "Unauthorized Acceess",
-  "payment_unautharized_reportId_describtion": "The report Id used is not authorized to access this page or not registered in the data base."
+  "payment_unautharized_reportId_describtion": "The report Id used is not authorized to access this page or not registered in the data base.",
+  "found_at_date": "Found at date:",
+  "item_details_bad_request_message": "Invalid Request",
+  "item_details_bad_request_describtion": "The item you’re trying to view cannot be loaded because the request id in URL was incomplete or incorrect.",
+
+  "item_details_not_found_message": "Item Not Found",
+  "item_details_not_found_describtion": "We couldn’t find any record matching this report id in URL in our database.",
+  "item_details_server_error_message": "Server Error",
+  "item_details_server_error_describtion": "Something went wrong while retrieving the item details. Please try again later.",
+  "lost_item_details": "Lost Item Details",
+  "recipient_details": "Where, and who have your item now: ",
+  "matched_at": "Matched by Dhallaty at: "
 }
