fix admn-login translation

--- a/client/public/locales/ar/translation.json
+++ b/client/public/locales/ar/translation.json
@@ -67,7 +67,7 @@
   "TikTok": "تيك توك",
 
   "LinkedIn": "لينكد إن",
-  "Admin Area Login": "تسجيل دخول الادمن",
+  "Admin Login": "تسجيل دخول المسؤولين",
   "Email": "البريد الإلكتروني",
   "Password": "كلمة المرور",
   "Enter your email": "أدخل بريدك الإلكتروني",
