--- a/client/public/locales/en/translation.json
+++ b/client/public/locales/en/translation.json
@@ -68,7 +68,7 @@
   "TikTok": "TikTok",
 
   "LinkedIn": "LinkedIn",
-  "Admin Area Login": "Admin Area Login",
+  "Admin Login": "Admins Login",
   "Email": "Email",
   "Password": "Password",
   "Enter your email": "Enter your email",
