Finish JWT auth

--- a/client/public/locales/ar/translation.json
+++ b/client/public/locales/ar/translation.json
@@ -28,6 +28,7 @@
   "What did you find ?": "ماذا وجدت؟",
   "Lost an item ?": "فقدت غرض؟",
   "Lost items form": "نموذج المفقودات",
+  "Remember me": "تذكرني (ابقني مسجلاً)",
   "Name": "الاسم",
   "Email": "البريد الإلكتروني",
   "Description of the found item": "وصف الغرض المعثور عليه",
@@ -75,6 +76,7 @@
   "Logging In...": "جاري تسجيل الدخول...",
   "Login": "تسجيل الدخول",
   "Admin login": "دخول الموظفين",
+  "Remember me": "تذكرني",
 
   "About Dhallaty": "عن ضالتي",
   "about_hero_description": "نربط الأشخاص بممتلكاتهم المفقودة من خلال مطابقة البلاغات بتقنية الذكاء الاصطناعي. هدفنا جعل العثور على الأغراض المفقودة بسيطاً وسريعاً وآمناً.",
