--- a/client/public/locales/en/translation.json
+++ b/client/public/locales/en/translation.json
@@ -29,6 +29,7 @@
   "What did you find ?": "What did you find ?",
   "Lost an item ?": "Lost an item ?",
   "Lost items form": "Lost items form",
+  "Remember me": "Remember me (keep me signed in)",
   "Name": "Name",
   "Email": "Email",
   "Description of the found item": "Description of the found item",
